<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/activity_main_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonStartFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonStartFinishClicked"
        android:text="@string/button_start_finish"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonFinishStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonFinishStartClicked"
        android:text="@string/button_finish_start"
        android:textAllCaps="false" />

</LinearLayout>